[B]Retrospect v5.2.22 - Changelog - 2021-01-29[/B]

A minor release to fix NRK.no categories and to implement the move from Vier.be to goplay.be.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: SVT HTML videos broken.